--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:id="@+id/">
 
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="67dp"
+        android:layout_height="wrap_content"
         android:id="@+id/rankingLayout">
-
-        <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:id="@+id/userimageView"
-            android:layout_gravity="left|center_vertical"
-            android:src="@drawable/ic_launcher" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,15 +25,26 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Score"
             android:id="@+id/rankscore"
-            android:layout_gravity="center|right"
-            android:gravity="top|left" />
+            android:layout_gravity="center_vertical|right"
+            android:gravity="top|left"
+            android:layout_marginRight="50dp" />
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:id="@+id/userimageView"
+            android:layout_gravity="left|bottom"
+            android:src="@drawable/ic_launcher"
+            android:layout_marginLeft="50dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="rank"
+            android:id="@+id/rankRank"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="10dp" />
     </FrameLayout>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_gravity="right" />
 </LinearLayout>
