--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_gravity="right|bottom"
         android:layout_toStartOf="@+id/gender"
         android:layout_toEndOf="@+id/profileimageView"
-        android:layout_below="@+id/username2"
+        android:layout_below="@+id/friend_name"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="User Name"
-        android:id="@+id/username2"
+        android:id="@+id/friend_name"
         android:layout_toEndOf="@+id/profileimageView"
         android:textSize="30dp"
         android:layout_gravity="right|center_vertical"
@@ -59,7 +59,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
+        android:id="@+id/friend_list"
         android:layout_toEndOf="@+id/mainimageView"
         android:layout_above="@+id/optionButton"
         android:fastScrollEnabled="false"
@@ -85,8 +85,8 @@
         android:layout_toEndOf="@+id/mainimageView"
         android:layout_gravity="center_horizontal|bottom"
         android:layout_toStartOf="@+id/optionButton"
-        android:layout_below="@+id/username2"
+        android:layout_below="@+id/friend_name"
         android:layout_alignBottom="@+id/birthday"
-        android:layout_alignEnd="@+id/username2" />
+        android:layout_alignEnd="@+id/friend_name" />
 
 </RelativeLayout>
