--- a/app/src/main/res/layout/ranking_item.xml
+++ b/app/src/main/res/layout/ranking_item.xml
@@ -3,13 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
-    android:id="@+id/">
+    android:weightSum="1">
 
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rankingLayout">
+        android:id="@+id/rankingflameLayout">
 
         <TextView
             android:layout_width="wrap_content"
